// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadoutDisplay matches snapshot when primary is false 1`] = `
<div
  className="sc-aXZVg dSTeez"
/>
`;

exports[`ReadoutDisplay matches snapshot when primary is true 1`] = `
<div
  className="sc-aXZVg hIsqnV"
/>
`;
